--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://developerfolio.js.org/",
+  "homepage": "https://ajayupreti.github.io/",
   "name": "ajayupreti.github.io",
   "version": "0.1.0",
   "private": true,
