--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ajayupreti.github.io/",
+  "homepage": "https://ajayupreti.github.io/portfolio",
   "name": "ajayupreti.github.io",
   "version": "0.1.0",
   "private": true,
@@ -21,7 +21,7 @@
     "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
